recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: identifier expected but ')' found.
  while(sum!=360.){
                 ^